--- a/Char3.변수와 데이터 입력/3.변수 선언하기.md
+++ b/Char3.변수와 데이터 입력/3.변수 선언하기.md
@@ -91,7 +91,7 @@ int main(void)
 
 ​				■■short	 	← 	2byte
 
-​			■■■int 			  ← 	4byte
+​		    ■■■■int  		  ← 	4byte
 
 ​		■■■■long			 ← 	4byte
 
@@ -157,19 +157,21 @@ int main()
 
 단, long형은 **%ld** , longlong  형은 **%lld** 로 출력한다.
 
+그럼, 언제 어떤 자료형을 사용하면 될까?
+
+1. 특별한 경우가 아니면 정수형 int를 사용한다. (연산이 가장 빠르다)
+2. long형은 큰 값을 저장할 때만 사용한다. 
+3. 자료형의 크기를 모른다면 sizeof 연산자를 사용해서 크기를 알아본다.
+
+``` c
+printf("longlong형의 크기 : %d바이트\n", sizeof(longlong));
+```
 
 
 
+---
 
-
-
-
-
-
-
-------
-
-3. unsigned 정수 자료형
+### 3.unsigned 정수 자료형
 
 방금 앞에서 배운 자료형은 양수와 음수 모드 저장가능하였다. 
 
@@ -179,21 +181,88 @@ int main()
 
 unsugned는 정수형을 양수 전용으로 쓰고 싶을 때 사용하며,
 
-⁜ 일반적으로 int a; 에는 자동으로 signed로 선언되기 때문에 우리 눈에는 보이지 않는 것이다.
+일반적인 int a; 에는 자동으로 signed로 선언되기 때문에 우리 눈에는 보이지 않는 것이다.
 
+```c
+#include <stdio.h>
 
+int main(void)
+{
+    unsigned int a;
+    
+    a = 4294967295;		//	큰 양수 저장
+    prtinf("%d\n", a);	// %d로 출력
+    a = -1;				// 음수 저장
+    printf("%u\n", a);	// %u로 출력
+    
+    return 0;
+}
 
+// 결과
+-1
+4294967295
+```
 
+출력한 값을 보면 저장한 값과 반대로 출력이 되었다.
 
-![img](https://cdn.imweb.me/upload/S20210422dd3ba345a66a6/5870f01026182.png)
+이유는, 저장되는 형태는 같으나, 해석해서 보여주는 방법이 다르기 때문이다.
 
+##### %d = 부호까지 생각해서 10진수로 출력하는 변환문자
 
+##### %u = 부호 없는 10진수로 출력하는 변환문자
 
 
 
 ------
 
-4. 실수 자료형
+### 4.실수 자료형
+
+데이터를 구현하는 방법이 정수와 다르기 때문에, **별도의 자료형을 사용**한다.
+
+​		■  ← 1byte			(유효숫자) 
+
+​				  ■■■■  float(7)  	
+
+​		■■■■■■■■ double (15)
+
+ ■■■■■■■■  long double (15 이상)
+
+
+
+정수랑 다르게 실수에서는 값의 범위보다 **유효숫자의 개수**에 주목할 필요가 있다.
+
+**유효숫자** 는 많을수록 더 정확한 값을 표현 할 수있다.
+
+```c
+#include <stdio.h>
+
+int main(void)
+{
+	
+	float ft = 1.234567890123456789;		// 유효 숫자가 많은 값으로 초기화
+	double db = 1.234567890123456789;
+
+	printf("float형 변수의 값 : %.20f\n", ft);	// 소수점 이하 20자리까지 출력
+	printf("double형 변수의 값: %.20lf\n", db);
+
+	return 0;
+}
+
+```
+
+컴퓨터에서 실수 표현은 오차가 있기 때문에
+
+자료형에 따라 유효 숫자 범위 내에서 사용해야 한다.
+
+
+
+
+
+
+
+
+
+
 
 
 
