--- a/Char6.반복문/반복문.md
+++ b/Char6.반복문/반복문.md
@@ -125,11 +125,91 @@
   }
   ```
 
+
+
+
+
+
+* 구구단 만들기
+
   ```c
+  #define _CRT_SECURE_NO_WARNINGS
+  #include <stdio.h> 
   
-      for(int j=2*num-1;j>2*i;j--){
-  	printf("*");
+  int main(void)
+  {
+  	int a,b;
+  	printf("몇단을 입력할까요? :");
+  	scanf_s("%d", &a );
+  
+  	for (b = 1; b <= 9; b++)
+  	{
+  		printf("%d * %d = %d\n", a, b, a * b);
+  		
+  	}
+  
+  	return 0;
+  
+  }
   ```
 
   
+
+---
+
+### 6. break
+
+break 는 본인하고 가장 가까운 for문만 빠져나온다 ( 2개 X)
+
+```c
+#include <stdio.h>
+
+int main(void)
+{
+	int i;
+	int sum = 0;
+
+	for (i = 1; i <= 10; i++)
+	{
+		sum += i;
+		if (sum > 30) break;
+
+	}
+
+	printf("누락한 값 : %d\n", sum);
+	printf("마지막으로 더한 값 : %d\n", i);
+
+	return 0;
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
