--- a/Char3.변수와 데이터 입력/3.변수 선언하기.md
+++ b/Char3.변수와 데이터 입력/3.변수 선언하기.md
@@ -1,6 +1,6 @@
 ### 1.변수 선언하기
 
-## 		int a ;  
+## int a ;  
 
 **int** = 자료형 = 변수의 크기를 나타냄
 
@@ -87,13 +87,13 @@ int main(void)
 
 
 
-​					■char 		← 	1byte
-
-​				■■short	 	← 	2byte
-
-​		    ■■■■int  		  ← 	4byte
-
-​		■■■■long			 ← 	4byte
+					■char 		← 	1byte
+	
+				■■short	 	← 	2byte
+	
+		    ■■■■int  		  ← 	4byte
+	
+		■■■■long			 ← 	4byte
 
 ■■■■■long long 	     ← 	8byte
 
@@ -219,11 +219,11 @@ int main(void)
 
 데이터를 구현하는 방법이 정수와 다르기 때문에, **별도의 자료형을 사용**한다.
 
-​		■  ← 1byte			(유효숫자) 
-
-​				  ■■■■  float(7)  	
-
-​		■■■■■■■■ double (15)
+		■  ← 1byte			(유효숫자) 
+	
+				 	 ■■■■  float(7)  	
+	
+			■■■■■■■■ double (15)-
 
  ■■■■■■■■  long double (15 이상)
 
@@ -254,35 +254,37 @@ int main(void)
 
 자료형에 따라 유효 숫자 범위 내에서 사용해야 한다.
 
+##### 	[ 특징 ]
 
-
-
-
-
-
-
-
-
-
-
-
-![img](https://cdn.imweb.me/upload/S20210422dd3ba345a66a6/31c31155bdd38.png)
-
-
-
-
-
-
-
-
-
-
+1. 정수형이 기본이며, 실수형은 꼭 필요한 경우 사용한다.	
+2. 실수형은 유효숫자가 많은 double형을 기본으로 사용한다.
+3. 컴파일러 마다 구현방식이 다르다면, **코드 호환성**을 보장하지 못하기 때문에, 주의해서 사용해야한다.
 
 ------
 
-5. 문자열 저장
+### 5.문자열 저장
 
-![img](https://cdn.imweb.me/upload/S20210422dd3ba345a66a6/e3c0f8b6a1e6e.png)
+```c
+#include <stdio.h>
+
+int main(void)
+{
+    char fruit[20] = "strawberry";	//char 배열 선언과 문자열 초기화
+    
+    printf("딸기 : %s\n", fruit);				//배열명으로 저장된 문자열 출력
+    printf("딸기쨈 : %s %s\n", fruit, "jam"); // 문자열 상수를 직접 %s로 출력 
+    
+    return 0;    
+}
+```
+
+
+
+#### `char fruit[6] = "apple";`
+
+			fruit  = 배열명
+	
+			[ 6 ]  =  문자열의 길이 +1 이상  (null 문자때문에 +1 을 해준다.)
 
 
 
@@ -296,42 +298,36 @@ int main(void)
 
 * char 배열에 문자열 복사
 
-  앞에서 배열에는 대입 연산자를 사용할 수 없다고 하였다, 그럼 새로운 문자열을 저장하려면 어떻게 해야할까?
+  앞에서 배열에는 대입 연산자를 사용할 수 없다고 하였다, 그럼 **새로운 문자열**을 저장하려면 어떻게 해야할까?
 
-  이때에는 strcpy 함수를 사용한다.
+  이때에는 **strcpy 함수**를 사용한다.
 
 ```c
 #define _CRT_SECURE_NO_WARNINGS
 #include <stdio.h>
-#include <string.h>
+#include <string.h>		// 문자열을 다룰 수 있는 string.h 헤더 파일 포함
 
 int main(void)
 {
 
-	char fruit[20] = "strawberry";
+	char fruit[20] = "strawberry";	// strawberry로 초기화
 
-	printf("%s\n", fruit);
-	strcpy(fruit, "banana");
-	printf("%s\n", fruit);
+	printf("%s\n", fruit);			// strawberry 출력
+	strcpy(fruit, "banana");		// fruit에 banana 복사
+	printf("%s\n", fruit);			// banana 출력
 
 	return 0;
 }
 
 ```
 
+⁜ 컴파일 오류가 발생했을 때 , 소스 코드 첫 줄에 `#define _CRT_SECURE_NO_WARNINGS` 을 사용한다.
 
 
-
-
-![image-20210427155727464](C:\Users\PKNU\AppData\Roaming\Typora\typora-user-images\image-20210427155727464.png)
-
-
-
-⁜ 컴파일 오류가 발생했을 때 , 소스 코드 첫 줄에 #define _CRT_SECURE_NO_WARNINGS 을 사용한다.
 
 ---
 
-6. const를 사용한 변수
+### 6.const를 사용한 변수
 
 ```c
 #include <stdio.h>
@@ -350,70 +346,235 @@ int main()
 }
 ```
 
+* const를 사용한 변수는 초깃값이 수정이 불가능하다.
 
-
-
-
-![image-20210427160428194](C:\Users\PKNU\AppData\Roaming\Typora\typora-user-images\image-20210427160428194.png)
-
-
-
-
+  => 상수처럼 사용가능
 
 
 
 ---
 
-7. 예약어와 식별자
+### 7. 예약어와 식별자
 
-예약어는 컴파일러와 사용 방법이 약속된 단어 ex) 자료형 이름
+* **예약어**는 컴파일러와 사용 방법이 약속된 단어 ex) 자료형 이름
+* **식별자**는 필요에 따라 사용자가 만들어 사용하는 단어 ex) 변수
 
-식별자는 필요에 따라 만들어 사용하는 단어 ex) 변수
+#### [ 식별자 만드는 규칙 ]
 
-*  식별자 만드는 규칙
+1. 알파벳 대소문자, 숫자, 밑줄(_) 로 만든다.  
 
-1. 알파벳 대소문자, 숫자, 밑줄(_) 로 만든다.
-2. 숫자로 시작할 수 없다.
-3. 대문자와 소문자는 서로 다른 식별자로 인식한다.( 대소문자 구별 )
+   ex) `make_money` / `Be-apple ~ (x)`
+
+2. 숫자로 시작할 수 없다. 
+
+    ex) `1num (x) / num1 (O)`
+
+3. 대문자와 소문자는 서로 다른 식별자로 인식한다.( 대소문자 구별 )\
+
+   ex)  `apple != APPLE`
+
 4. 예약어는 식별자로 사용할 수 없다.
 
+   ex) `short (x)`
+
+
+
+---
+
+### 8. scanf 함수의 사용법
+
+#### ` scanf("%d", &a); `
+
+			%d 	=	int형 변환 문자
+	
+			   &	 = 	변수명 앞에 붙인다.
+	
+				a	 =	변수명
+
+* scanf 함수를 사용한 입력
+
+  ``` c
+  #include <stdio.h>
+  
+  int main(void)
+  {
+      int a;
+      
+      scanf("%d", &a);				// 여기서 변수 a에 값 입력
+      printf("입력된 값 : %d\n", a);	 // 입력한 값 출력
+      
+      return 0;
+  }
+  ```
+
+  scanf 함수는 **입력 값을 받는 함수**로, 실행 시 원하는 값을 **입력** 할  수 있다.
+
+  이렇게 입력을 받으려면 자료형에 따른 **입력 변환 문자**와 변수 앞에 **&**를 사용한다.
+
+  하지만 **문자열 입력** 은 char배열(%s) 을 이용하며, **&**기호를 사용하지 않는다.
+
+
+
+		만약, 여러가지 값을 한번에 받아서 입력하고 싶을 때는 어떻게 하면 될까?
+	
+		다음과 같이 연속 입력이 가능하다.
+
+* scanf 함수를 사용한 연속 입력
+
+  ```c
+  #include <stdio.h>
+  
+  int main(void)
+  {
+      int age;						// 나이는 정수형
+      double height;					// 키는 실수형
+      
+      printf("나이와 키를 입력하세요 : ");	// 입력 안내 메시지 출력
+      scanf("%d%lf", &age, &height);	   // 나이와 키를 함께 입력
+      printf("나이는 %d살, 키는 %.1lfcm입니다\n", age, height);	// 입력값 출력
+      
+      return 0;
+  }
+  ```
+
+  이렇게 연속 값을 입력 받을 수 있으며,
+
+  **둘 이상의 값을 입력** 시 에는 [ Space Bar ], [ Tab ], [ Enter ] 로 구분하여 준다.
+
+  [ Space Bar ] : `나이와 키를 입력하세요 : 23 168.7` 
+
+  	 [ Tab ]	   : `나이와 키를 입력하세요 : 23	168.7` 
+
+    [ Enter ]	
+
+  ```c
+  나이와 키를 입력하세요 : 23	
+  					  168.7 
+  ```
+
+  
+
+---
+
+### 9. 문자 & 문자열의 입력
+
+```c
+#include <stdio.h>
+
+int main(void)
+{
+    char grade;			// 학점을 입력할 변수
+    char name[20];		// 이름을 입력할 배열
+    
+    printf("학점 입력 : ");
+    scanf("%c", &grade);	// grade 변수에 학점 문자 입력
+    
+    printf("이름 입력 : ");
+    scanf("%s", name);	// name 배열에 이름 문자열 입력, &를 사용하지 않는다.
+    
+    printf("%s의 학점은 %c입니다.\n", name, grade);
+    
+    return 0;
+}
+```
+
+
+
 
 
 
 
 ---
 
+## [ 마지막 정리 ]
+
+1. **변수 선언**으로 메모리에 저장 공간을 확보하여, 
+
+   대입 연산자( = )로 변숫값을 초기화하거나 값을 저장한다.
+
+   초기화하지 않은 변수에는 **쓰레기 값** 이 들어 있다.
+
+   
+
+2. 변수의 형태를 **자료형**이라 하며, 정수형과 실수형으로 나눈다.
+
+ 
+
+3. 변수에 **const**를 사용하면 상수처럼 사용할 수 있다.
 
 
 
+4. **예약어**는 컴파일러와 약속된 단어이고,
+
+   **식별자**는 사용자가 만들어낸 단어이다.
 
 
 
+5. **scanf 함수** 로 입력할 때 변수 앞에 &를 사용한다.
 
 
 
+6. **둘 이상의 값을 입력** 할 때는  [ Space Bar ], [ Tab ], [ Enter ] 로 구분한다.
 
 
 
+7. **문자열 입력** 은 char 배열을 이용하며, &기호를 사용하지 않는다.
 
 
 
+#### [ 표로 정리하기 ]
+
+* 정수형 종류
+
+|  자료형  | 크기(Byte) |                        값의 저장 범위                        | 출력 변환 문자 |
+| :------: | :--------: | :----------------------------------------------------------: | :------------: |
+|   char   |     1      |                          -128 ~ 127                          |  %c  또는 %d   |
+|  short   |     2      |                       - 32768 ~ 32767                        |       %d       |
+|   int    |     4      |                  - 2147483648 ~ 2147483647                   |       %d       |
+|   long   |     4      |                  - 2147483648 ~ 2147483647                   |      %ld       |
+| longlong |     8      | ![img](file:///C:\Users\mini2\AppData\Local\Temp\DRW000020886ce0.gif) ~ ![img](file:///C:\Users\mini2\AppData\Local\Temp\DRW000020886ce6.gif) |      %lld      |
 
 
 
+* unsigned 정수 자료형
+
+|     자료형     | 크기(Byte) | 값의 저장 범위 | 출력 변환 문자 |
+| :------------: | :--------: | :------------: | :------------: |
+| unsigned char  |     1      |     0~ 255     |       %u       |
+| unsigned short |     2      |   0 ~ 65535    |       %u       |
+|  unsigned int  |     4      | 0 ~ 4294967295 |       %u       |
+| unsigned long  |     4      | 0 ~ 4294967295 |      %lu       |
 
 
 
+* 실수형 종류
+
+|   자료형    | 크기(Byte) | *유효 숫자 | 출력 변환 문자 |
+| :---------: | :--------: | :--------: | :------------: |
+|    float    |     4      |     7      |       %f       |
+|   double    |     8      |     15     |      %lf       |
+| long double |   8 이상   |  15 이상   |      %Lf       |
 
 
 
+* 자료형에 따른 입력 변환 문자
+
+| 데이터 종류 | 자료형               | 크기(Byte)    | 입력 변환 문자 |
+| ----------- | -------------------- | ------------- | -------------- |
+| 정수        | (unsigned) short     | 2             | %hd (%hu)      |
+|             | (unsigned) int       | 4             | %d (%u)        |
+|             | (unsigned) long      | 4             | %ld (%lu)      |
+|             | (unsigned) long long | 8             | %lld (%llu)    |
+| 실수        | float                | 4             | %f             |
+|             | double               | 8             | %lf            |
+|             | long double          | 8, 10, 12, 16 | %Lf            |
+| 문자        | char                 | 1             | %c             |
+| 문자열      | char 배열            | 가변적        | %s             |
 
 
 
+---
 
+3 강 변수와 데이터
 
-
-
-
-
-
+	끝 	> - <
