--- a/Char4.연산자/04_연산자.md
+++ b/Char4.연산자/04_연산자.md
@@ -1,4 +1,12 @@
-#### 1. 산술 연산자
+---
+title: C4.연산자
+categories: [C]
+comments: true
+
+
+---
+
+#### 1. 산술 연산자 & 대입연산자
 
 * 대입, 덧셈, 뺄셈, 곱셈, 음수연산
 
@@ -27,11 +35,45 @@ int main(void)
 }
 ```
 
+이것은 연산의 가장 기본인 **사칙연산**이다.
+
+여기서, 놀라운 점은 컴퓨터는 + 만 할 수 있다는 점이다. 그럼  뺄셈(-), 곱셈(*), 나눗셈( / ) 은 어떻게 하는가?
+
+뺄셈의 원리는 간단하다 컴퓨터는 6 - 3 을 하려고하면 3이 숫자 10이 되려면 7이 필요하다 6 + 7 를 하면 13이라는 결과 값이 나오는데,
+
+여기서 앞자리 1를 빼면 우리가 원하는 6 -3 의 값 3이 나온다. 컴퓨터는 이러한 원리를 이용해서 뺄셈을 진행한다.
+
+그럼 곱셈과 나눗셈은 어떻게 할까? 정말 쉽다.
+
+곱셈은 덧셈을 빠르게 해주면되는거고, 나눗셈은 뺄셈을 빠르게 해주면 되는것이다. (정말 쉽다....)
+
+컴퓨터는 이러한 원리로 계산을 해서 우리에게 값을 알려준다.
+
+그럼 C언어에서는 어떻게 사용할까?
+
+#### 변수 = 연산;
+
+변수에 연산값을 저장해준다. (매우쉽다)
+
+그리고 printf 출력함수에 변환문자와 변수명을 넣어서 출력해주면된다. ( 참 쉽죵? )
+
+지금 까지 사칙 연산이였다.  
+
+산술 연산자에는 **음수연산자( - '피연산자')** 가 하나더 있다.
+
+#### inv = - a;
+
+이건 음수 연산( - ) 후 대입한다는 뜻이다. (피연산자의 부호를 바꾸는 역할)
+
+ 그럼 이 식의 결과 값은 , 음수( - ) 로 변환되어서 출력된다.
+
+만약 a 의 값이 음수였다면 양수로 변환되어서 출력이 된다.
 
 
---
 
-* 대입 연산자
+
+
+* **대입 연산자**
 
 ```c
 a = 10;
@@ -39,24 +81,63 @@ b = 20;
 => 대입 연산
 ```
 
+변수에서 = 기호를 사용하였다. 
+
+ ![image-20210505140556590](C:\Users\PKNU\AppData\Roaming\Typora\typora-user-images\image-20210505140556590.png)
+
+이 기호  = 는 **대입연산자** 라고 하며, 오른쪽 수식의 결과를 왼쪽 변수에 저장한다.
+
+상수나 변수 또는 연산자를 사용한 식 모두 변수에 저장이 가능하다.
 
 
---
-
-* 나누기 연산자와 나머지 연산자
 
 
 
-
+* **나누기 연산자와 나머지 연산자**
 
 ```c
+#include <stdio.h>
+
+int main(void)
+{
+	double apple;		//실수
+	int banana;			//정수
+	int orange;			//정수
+
+	apple = 5.0 / 2.0;	//실수와 실수의 나누기 연산	
+	banana = 5 / 2;		// 정수와 정수의 나누기 연산
+	orange = 5 % 2;		// 정수외 정수의 나머지 연산(%)
+
+	printf("apple : %.1lf\n", apple);
+	printf("banana: %d\n", banana);
+	printf("orange : %d\n", orange);
 
 
+	return 0;
+}
+```
+
+**나누기( / ) 연산자**는 피연산자의 형태에 따라 결과값이 달라진다.
+
+정수와 정수를 나눴을 경우에는 소숫점 자리는 출력이 되지 않기에 실수끼리 나눴을 경우와 값이 달라진다.
+
+```c
+apple = 5.0 / 2.0;	//실수와 실수의 나누기 연산
+=> 2.5
+banana = 5 / 2;		// 정수와 정수의 나누기 연산
+=> 2
 ```
 
 
 
+**나머지( % )연산자**는 몫을 뺀 나머지만 구할 때 사용된다.
 
+단 , 실수에서는 사용이 되지 않으며, 정수에서만 사용이 가능하다. ( 에러 발생)
+
+```c
+orange = 5 % 2;		// 정수외 정수의 나머지 연산(%)
+=> 1
+```
 
 
 
@@ -64,30 +145,39 @@ b = 20;
 
 #### 2. 증감 연산자
 
-증감 연사자의 연산
+**증감 연사자의 연산자** 는 반복문(for, while 등)에서 루프마다 하나씩 더하거나 뺄 때 자주 사용한다.
 
-* ++ a = 증가 후 대입
+이것은 단항 연산자로 대입연산까지 수행하기 때문에, 변수의 값을 1씩 증가, 감소시킬때 쉽게 사용가능하다. 
 
-  ```c
-  #include <stdio.h>
-  
-  int main(void)
-  {
-  	int a = 10, b = 10;
-      
-      ++a;	//값을 1만큼 증가
-  	--b;	//값을 1만큼 감소
-      
-      printf("a : %d\n", a);
-      printf("b : %d\n", b);
-  
-      return 0;
-  }
-  ```
 
-  
 
-* a ++ = 대입 후 증가
+* < 전위 표기 >  증가 or 감소 후 대입 
+
+```c
+#include <stdio.h>
+
+int main(void)
+{
+	int a = 10, b = 10;
+    
+    ++a;	//값을 1만큼 증가
+	--b;	//값을 1만큼 감소
+    
+    printf("a : %d\n", a);
+    printf("b : %d\n", b);
+
+    return 0;
+}
+```
+
+```c
+>> a : 11
+   b : 9
+```
+
+
+
+* < 후위 표기 >   대입 후 증가 or 감소
 
 ```c
 #include <stdio.h>
@@ -110,7 +200,10 @@ int main(void)
 }
 ```
 
-
+```c
+>>	a, b : 11       9
+	c, d : 11       9
+```
 
 그런데 출력결과를 보니,
 
@@ -122,30 +215,32 @@ int main(void)
 
 * 전위 표기와 후기 표기
 
-  ```c
-  #include <stdio.h>
-  
-  int main(void)
-  {
-  	int a = 5, b = 5;
-  	int pre, post;
-  
-  	pre = (++a)*3;
-  	post = (b++) * 3;
-  
-  	printf("초깃값 a = %d, b = %d\n", a, b);
-  	printf("전위형: (++a) * 3 = %d, 후위형:(++b) * 3 = %d\n", pre, post);
-  
-  
-  	return 0;
-  }
-  ```
+```C
+#include <stdio.h>
 
-  
+int main(void)
+{
+	int a = 5, b = 5;
+	int pre, post;
 
-예를 들어, 이렇게 
+	pre = (++a) * 3;
+	post = (b++) * 3;
+
+	printf("초깃값 a = %d, b = %d\n", a, b);
+	printf("전위형: (++a) * 3 = %d, 후위형:(++b) * 3 = %d\n", pre, post);
 
 
+	return 0;
+
+}
+```
+
+```c
+>> 	초깃값 a = 6, b = 6
+	전위형: (++a) * 3 = 18, 후위형 : (++b) * 3 = 15
+```
+
+예를 들어, 이렇게 다른 연산자와 함께 사용시 다른 값이 출력된다.
 
 
 
@@ -429,4 +524,3 @@ int main(void)
 	return 0;
 }
 ```
-
