--- a/Char09.포인터/9.포인터.md
+++ b/Char09.포인터/9.포인터.md
@@ -303,7 +303,169 @@ int main(void)
 
 
 ---
+포인터 = 주소를 저장하는 일정한 크기의 메모리 공간
 
+따라서, 언제든지 다른 **주소를 저장**하거나 **포인터끼리 대입**할 수  있다.
+
+#### 포인터 = 변수
+
+단, 일반 변수와 달리 **엄격한 기준이 적용** 된다.
+
+
+
+### 1. 주소와 포인터 차이
+
+* **주소** = 변수에 할당된 메모리 저장 공간의 시작 주소 값 자체
+
+* **포인터** = 그 값을 저장하는 또 다른 메모리 공간
+
+
+
+#### [ 주소 ]	주소는 '상수' , 특정 변수의 주소 값은 바뀌지 X
+
+```c
+int a, b;	// 일반 변수 선언
+int *p;		// 포인터 변수 선언
+
+p = &a;	// p가 a를 가리키도록 설정
+p = &b	// p가 변수 b를 가리키도록 바꿈
+```
+
+
+
+#### [ 포인터 ]	포인터는 '변수', 다른 주소를 대입하여, 그 값을 바꿀 수 있다.
+
+```c
+int a;			//일반 변수 선언
+int *pa, *pb;	// 가리키는 자료형(여기서 int형)이 같은 두 포인터
+
+pa = pb = &a;	// pa와 pa에 모두 a의 주소 저장
+```
+
+이 경우 a 값을 바꾸거나 연산하는데 pa와 pb 모두 사용할 수 있다.
+
+```c
+*pa = 10;	// pa가 가리키는 변수 a에 10대입
+printf("%d", *pb);	// pb가 가리키는 변수 a 값 10출력
+```
+
+단,  ``&a = &b;`` 처럼 a의 주소를 b의 주소로 바꾸는건 불가능 
+
+
+
+
+
+---
+
+### 2. 주소와 포인터 크기
+
+포인터도 저장공간이므로 크기가 있다.
+
+포인터의 크기 = 저장할 주소의 크기에 따라 결정되는데,
+
+모든 주소와 포인터는 가리키는 자료형과 상관없이 그 크기는 같다.
+
+※ 단, 포인터의 크기는 컴파일러에 따라 다를 수 있다.
+
+주소와 포인터의 크기는 **sizefo 연산자**로 확인할 수 있다.
+
+```c
+#include <stdio.h>
+
+int main(void)
+{
+  char ch;
+  int in;
+  double db;
+
+  char *pc = &ch;
+  int *pi = &in;
+  double *pd = &db;
+
+  printf("char형 변수의 주소크기 : %d\n", sizeof(&ch));
+  printf("int형 변수의 주소크기 : %d\n", sizeof(&in));
+  printf("double형 변수의 주소크기 : %d\n", sizeof(&db));
+
+  printf("char * 포인터가 가리키는 변수의 크기 : %d\n", sizeof(pc));
+  printf("int * 포인터가 가리키는 변수의 크기 : %d\n", sizeof(pi));
+  printf("double * 포인터가 가리키는 변수의 크기 : %d\n", sizeof(pd));
+
+  return 0;
+}
+
+[ 결과 ]
+char형 변수의 주소크기 : 4 							
+int형 변수의 주소크기 : 4								
+double형 변수의 주소크기 : 4					   		  
+char * 포인터가 가리키는 변수의 크기 : 4					
+int * 포인터가 가리키는 변수의 크기 : 4						 
+double * 포인터가 가리키는 변수의 크기 : 4		
+```
+
+​	
+
+
+
+---
+
+### [ 마지막 정리 ]
+
+1. **주소와 포인터** 는 상수와 변수의 **차이**가 있다.
+2. **포인터 크기**는 주소의 크기와 동일하다.
+3. **포인터**에 주소를 저장할 때는 가리키는 **자료형**이 같이 있어야한다.
+4. **포인터의 주요 기능**중 하나는 함수간에 효과적으로 데이터를 공유하는 것이다.
+
+ 
+
+### [ 간접 참조 연산자를 사용한 예 ]
+
+* 대입 연산자 (왼쪽)	``a = 10;``  =  ``*pa = 10;``
+
+
+
+* 대입 연산자 (오른쪽)	``b = a;``  =  ``b = *pa;``
+
+
+
+* 피연산자	``a + 20;`` = ``*pa + 20;``
+
+
+
+* 출력	``printf("%d", a);`` = ``printf("%d", *pa)``
+
+
+
+* 입력	``scanf("%d", &a);`` = ``scanf("%d", &*pa);``  or ``scanf("%d", pa);``
+
+
+
+---
+
+### [ 주소와 포인터의 특징 ]
+
+* 포인터	``int a, b;``  ,  ``int *p = &a;``  ,  ``p = &b;``
+
+
+
+* 포인터의 크기	``int *b``  ,  ``sizeof(p)``
+
+
+
+* 포인터의 대입 규칙 	``int *p;``  , ``double *pd;`` , ``pd = p;``
+
+
+
+
+
+/
+
+/
+
+/
+
+
+
+## 다음 Page. C10-1. 배열과 포인터
 
 
 
