--- a/Char09.포인터/9.포인터.md
+++ b/Char09.포인터/9.포인터.md
@@ -1,11 +1,4 @@
----
-title: C9-1.포인터(개념)
-categories: [C]
-comments: true
-
----
-
-#### 1. 포인터의 기본 개념
+## 1. 포인터의 기본 개념
 
 변수 = 메모리 공간  /  변수명 = 공간 식별 이름
 
@@ -31,7 +24,7 @@ comments: true
 
 ---
 
-#### 2. 주소 연산자 &
+## 2. 주소 연산자 &
 
 ##### 주소 = 변수가 할당된 메모리 공간의 시작 주소
 
@@ -66,6 +59,7 @@ int main(void)
 
 이때, 주소연산자& 를 사용하면 변수가 할당된 메모리 공간의 시작 주소 값을 알 수 있다.
 
+
 #### &변수명 
 
  변수에 할당된 메모리의 시작 주소를 확인하고,
@@ -76,7 +70,7 @@ int main(void)
 
 ---
 
-#### 3. 간접참조연산자 ( * )
+## 3. 간접참조연산자 ( * )
 
 앞에서는 단지 메모리의 주소를 출력하는 법을 알아보았다.
 
@@ -185,7 +179,7 @@ int main(void)
 
 ---
 
-### 4. const를 사용한 포인터
+## 4. const를 사용한 포인터
 
 ##### const  = 가리키는 변수의 값을 바꿀 수  없다.
 
@@ -231,7 +225,7 @@ int main(void)
 
 #### *pa가 가리키는 변수 a는 pa를 간접 참조해서 바꿀수 없다.
 
-그렇기에, ``*pa = 20;`` 처럼 pa의 값을 통해 a를 바꾸려고 하면 에러가 발생한다.
+그렇기에, ``*pa = 20;`` 처럼 pa의 값을 통해 a를 바꾸려고 하면 에러가 발생한다./
 
  
 
