--- a/Char09.포인터/9.포인터.md
+++ b/Char09.포인터/9.포인터.md
@@ -225,7 +225,7 @@ int main(void)
 
 #### *pa가 가리키는 변수 a는 pa를 간접 참조해서 바꿀수 없다.
 
-그렇기에, ``*pa = 20;`` 처럼 pa의 값을 통해 a를 바꾸려고 하면 에러가 발생한다./
+그렇기에, ``*pa = 20;`` 처럼 pa의 값을 통해 a를 바꾸려고 하면 에러가 발생한다./n
 
  
 
