--- a/Char09.포인터/9.포인터.md
+++ b/Char09.포인터/9.포인터.md
@@ -225,10 +225,10 @@ int main(void)
 
 #### *pa가 가리키는 변수 a는 pa를 간접 참조해서 바꿀수 없다.
 
-그렇기에, ``*pa = 20;`` 처럼 pa의 값을 통해 a를 바꾸려고 하면 에러가 발생한다./n
+그렇기에, ``*pa = 20;`` 처럼 pa의 값을 통해 a를 바꾸려고 하면 에러가 발생한다.
 
  
-
+ 
 * 응용 문제 ( 한번 생각해보고 실행해보자)
 
 ```c
@@ -289,14 +289,10 @@ int main(void)
 * 간접 참조 연산자 ( 포인터에 사용, 포인터가 가리키는 변수를 사용 )
 
 ### ``*pi = 10;``
-
-
-
-
-
-
-
 ---
+
+# 9-2. 포인터 이해
+
 포인터 = 주소를 저장하는 일정한 크기의 메모리 공간
 
 따라서, 언제든지 다른 **주소를 저장**하거나 **포인터끼리 대입**할 수  있다.
@@ -345,10 +341,6 @@ printf("%d", *pb);	// pb가 가리키는 변수 a 값 10출력
 
 단,  ``&a = &b;`` 처럼 a의 주소를 b의 주소로 바꾸는건 불가능 
 
-
-
-
-
 ---
 
 ### 2. 주소와 포인터 크기
@@ -396,7 +388,7 @@ int * 포인터가 가리키는 변수의 크기 : 4
 double * 포인터가 가리키는 변수의 크기 : 4		
 ```
 
-​	
+
 
 
 
