--- a/Char09.포인터/9.포인터.md
+++ b/Char09.포인터/9.포인터.md
@@ -443,15 +443,10 @@ double * 포인터가 가리키는 변수의 크기 : 4
 
 
 
-/
-
-/
-
-/
 
 
 
-## 다음 Page. C10-1. 배열과 포인터
+## [다음 Page. C10-1. 배열과 포인터](https://github.com/sumin2123/Study-C/blob/main/Char10.%EB%B0%B0%EC%97%B4%EA%B3%BC%20%ED%8F%AC%EC%9D%B8%ED%84%B0/Char10.%EB%B0%B0%EC%97%B4%EA%B3%BC%20%ED%8F%AC%EC%9D%B8%ED%84%B0.md)
 
 
 
