--- a/Char3.변수와 데이터 입력/3.변수 선언하기.md
+++ b/Char3.변수와 데이터 입력/3.변수 선언하기.md
@@ -569,3 +569,5 @@ int main(void)
 
 
 ---
+
+## 다음 Page [3강 변수와 데이터 선언](https://github.com/sumin2123/Study-C/blob/main/Char3.%EB%B3%80%EC%88%98%EC%99%80%20%EB%8D%B0%EC%9D%B4%ED%84%B0%20%EC%9E%85%EB%A0%A5/3.%EB%B3%80%EC%88%98%20%EC%84%A0%EC%96%B8%ED%95%98%EA%B8%B0.md)
