--- a/Char5.선택문/5.선택문.md
+++ b/Char5.선택문/5.선택문.md
@@ -9,3 +9,5 @@
 
   
 
+---
+## 다음 Page [6강 반복문](https://github.com/sumin2123/Study-C/blob/main/Char6.%EB%B0%98%EB%B3%B5%EB%AC%B8/%EB%B0%98%EB%B3%B5%EB%AC%B8.md)
