--- a/Char6.반복문/반복문.md
+++ b/Char6.반복문/반복문.md
@@ -194,22 +194,5 @@ int main(void)
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+---
+## 다음 Page [7강 함수](https://github.com/sumin2123/Study-C/blob/main/Char07.%ED%95%A8%EC%88%98/7.%ED%95%A8%EC%88%98.md)
