--- a/Char07.함수/7.함수.md
+++ b/Char07.함수/7.함수.md
@@ -292,12 +292,6 @@ void fruit(int count)
 
 
 
-
-
-
-
-
-
-
-
+---
+## 다음 Page [8강 배열](https://github.com/sumin2123/Study-C/blob/main/Char08.%EB%B0%B0%EC%97%B4/Char08.%EB%B0%B0%EC%97%B4.md)
 
