--- a/Char09.포인터/9.포인터.md
+++ b/Char09.포인터/9.포인터.md
@@ -40,7 +40,7 @@ int main(void)
 	double b;	// double형 변수 선언
 	char c;		// Char형 변수 선언
 
-	printf("int형 변수의 주소 : %u\n", &a);	// 주소 연산자로 주소 계산
+	printf("int형 변수의 주소 : %u\n", &a);	[^1]:주소 연산자로 주소 계산
 	printf("double형 변수의 주소 : %u\n", &b);
 	printf("char형 변수의 주소 : %u\n", &c);
 
