9강 정리 완료

--- a/Char09.포인터/9.포인터.md
+++ b/Char09.포인터/9.포인터.md
@@ -228,7 +228,7 @@ int main(void)
 그렇기에, ``*pa = 20;`` 처럼 pa의 값을 통해 a를 바꾸려고 하면 에러가 발생한다.
 
  
- 
+
 * 응용 문제 ( 한번 생각해보고 실행해보자)
 
 ```c
@@ -355,44 +355,254 @@ printf("%d", *pb);	// pb가 가리키는 변수 a 값 10출력
 
 주소와 포인터의 크기는 **sizefo 연산자**로 확인할 수 있다.
 
+* 주소와 포인터의 크기
+
 ```c
 #include <stdio.h>
 
 int main(void)
 {
-  char ch;
-  int in;
-  double db;
+	char ch;
+	int in;
+	double db;
 
-  char *pc = &ch;
-  int *pi = &in;
-  double *pd = &db;
+	char *pc = &ch;
+	int *pi = &in;
+	double *pd = &db;
+	
+	printf("char형 변수의 주소크기 : %d\n", sizeof(&ch));
+	printf("int형 변수의 주소크기 : %d\n", sizeof(&in));
+	printf("double형 변수의 주소크기 : %d\n", sizeof(&db));
 
-  printf("char형 변수의 주소크기 : %d\n", sizeof(&ch));
-  printf("int형 변수의 주소크기 : %d\n", sizeof(&in));
-  printf("double형 변수의 주소크기 : %d\n", sizeof(&db));
+	printf("char * 포인터의 크기 : %d\n", sizeof(pc));
+	printf("int * 포인터의 크기 : %d\n", sizeof(pi));
+	printf("double * 포인터의 크기 : %d\n", sizeof(pd));
 
-  printf("char * 포인터가 가리키는 변수의 크기 : %d\n", sizeof(pc));
-  printf("int * 포인터가 가리키는 변수의 크기 : %d\n", sizeof(pi));
-  printf("double * 포인터가 가리키는 변수의 크기 : %d\n", sizeof(pd));
+	printf("char * 포인터가 가리키는 변수의 크기 : %d\n", sizeof(*pc));
+	printf("int * 포인터가 가리키는 변수의 크기 : %d\n", sizeof(*pi));
+	printf("double * 포인터가 가리키는 변수의 크기 : %d\n", sizeof(*pd));
 
-  return 0;
+	return 0;
 }
 
-[ 결과 ]
-char형 변수의 주소크기 : 4 							
-int형 변수의 주소크기 : 4								
-double형 변수의 주소크기 : 4					   		  
-char * 포인터가 가리키는 변수의 크기 : 4					
-int * 포인터가 가리키는 변수의 크기 : 4						 
-double * 포인터가 가리키는 변수의 크기 : 4		
+>>> char형 변수의 주소크기 : 4
+	int형 변수의 주소크기 : 4
+	double형 변수의 주소크기 : 4
+	char * 포인터의 크기 : 4
+	int * 포인터의 크기 : 4
+	double * 포인터의 크기 : 4
+	char * 포인터가 가리키는 변수의 크기 : 1
+	int * 포인터가 가리키는 변수의 크기 : 4
+	double * 포인터가 가리키는 변수의 크기 : 8
+
+```
+
+* 각 변수의 주소를 구해서 크기를 출력
+
+```c
+printf("char형 변수의 주소크기 : %d\n", sizeof(&ch));
+printf("int형 변수의 주소크기 : %d\n", sizeof(&in));
+printf("double형 변수의 주소크기 : %d\n", sizeof(&db));
+```
+
+* 포인터의 크기 출력
+
+```c
+printf("char * 포인터의 크기 : %d\n", sizeof(pc));
+printf("int * 포인터의 크기 : %d\n", sizeof(pi));
+printf("double * 포인터의 크기 : %d\n", sizeof(pd));
+```
+
+이 둘을 보면 각각 변수 자체의 크기는 다 다르지만 그 시작 주소의 값의 크기는 모두 같다.
+
+포인터의 크기도 자료형과 상관 없이 다 같다.
+
+결론은,  **모든 주소와 포인터는 가리키는 자료형과 상관없이 그 크기는 같다.**
+
+
+
+---
+
+### 3. 포인터의 대입 규칙
+
+포인터의 크기는 모두 같다. 그렇기 때문에 대입 연산을 쉽게 생각할 수 도 있다.
+
+하지만, 다음 규칙에 따라 제한적으로 사용해야한다.
+
+#### [ 포인터의 대입 규칙 ]
+
+##### 1. 포인터는 가리키는 **<u>변수의 형태가 같을 때만</u>** 대입해야한다.
+
+* 허용되지 않는 포인터 대입
+
+```c
+#include <stdio.h>
+
+int main(void)
+{
+	int a = 10;			// 변수 선언과 초기화
+	int *p = &a;		// 포인터 선언과 동시에 a를 가리키도록 초기화
+	double *pd;			// double형 변수를 가리키는 포인터
+
+	pd = p;					// 포인터 p 값을 포인터 pd에 대입
+	printf("%lf\n", *pd);	// pd가 가리키는 변수의 값 출력
+
+
+	return 0;
+}
+
+>> -92559592117432107884277659021957555520241347761778250032873472.000000
+```
+
+※ 가리키는 자료형이 일치하지 않는 포인터의 대입을 시도하면, 경고 메시지가 나타난다.
+
+
+
+##### 2.  <u>형 변환을 사용한 포인터의 대입</u>은 언제나 가능하다.
+
+```c
+double a = 3.4;
+double *pb = &a;
+int *pi;
+pi = (int *)pd;
 ```
 
 
 
+---
+
+### 4. 포인터를 사용하는 이유
+
+변수를 사용하는 가장 쉬운 방법은 이름을 쓰는 것이다.
+
+또한, 포인터를 사용하려면 추가적인 변수 선언이 필요하고, 각종 연산을 수행해야한다. 
+
+그렇기에 사실 포인터를 즐겨 사용할 필요는 없다.
+
+#### 하지만, Why? 
+
+임베디드 프로그래밍을 할때 <u>메모리에 직접 접근하는 경우</u>나, <u>동적 할당한 메모리를 사용</u>하는 경우에는 <u>포인터가 반드시 필요</u>하다.
 
 
 
+* 두 변수의 값을 바꾸며 포인터 필요성 확인 ( swap 함수 호출)
+
+```c
+#include <stdio.h>
+
+void swap(int* pa, int* pb);		// 두 변수의 값을 바꾸는 함수의 선언
+
+int main(void)
+{
+	int a = 10, b = 20;				// 변수 선언과 초기화
+
+	swap(&a, &b);					// a,b의 주소를 인수로 주고 함수 출력
+	printf("a: %d, b: %d\n", a, b);	// 변수 a, b 출력
+
+	return 0;
+}
+
+void swap(int* pa, int* pb)		//매개변수로 포인터 선언
+{
+	int temp;		// 교환을 위한 임시 변수
+
+	temp = pa;		// temp에 pa가 가리키는 변수의 값 저장
+	pa = pb;		// pa가 가리키는 변수에 pb가 가리키는 변수의 값 저장
+	pb = temp;		// pb가 가리키는 변수에 temp 값 저장
+
+}
+```
+
+교환 작업은 swap함수 안에서 포인터를 통해 진행되지만,
+
+실제로 바뀌는 값은  main 함수의 변수 a 와 b가 된다.
+
+결국  <u>swap 함수는 포인터를 통해 main 함수의 변수 a,b를 공유</u> 하므로 두 변수를 직접 바꾸는일이 가능해진다.
+
+이제 두 변수의 값을 바꾸고 싶은 때는 언제든지 **swap 함수**를 호출하면 된다.
+
+
+
+#### 그럼, 포인터 없이 두 변수의 값을 바꾸는 함수는 불가능한가?
+
+1. swap함수에서 main함수의 a, b를 이름으로 직접 사용하는 방법
+
+```c
+#include <stdio.h>
+
+void swap(void);	// 두 변수의 값을 바꾸는 함수 선언
+
+int main(void)
+{
+	int a = 10, b = 20;
+
+	swap();		// 인수 없이 함수 호출
+	printf("a: %d,b: %d, a, b");
+
+	return 0;
+}
+
+
+
+void swap(void)	// 인수가 없기에 매개변수도 없음 
+{
+	int temp;	// 교환을 위한 변수
+
+	temp = a;
+	a = b;
+	b = temp;
+}
+
+```
+
+> ERROR 발생
+
+컴파일을 진행하였더니 a와 b는 선언되지 않은 식별자로 에러가 발생할 것이다.
+
+#### 이유는 , 변수명 사용범위가 함수 내부로 제안되어 있기때문에 다른 함수에서는 사용할 수 없기때문이다.
+
+
+
+2. main함수에서 a,b의 값을 swap 함수에 인수로 주는 방법
+
+```c
+#include <stdio.h>
+
+void swap(int x, int y);	//두 변수의 값을 바꾸는 함수 선언
+
+int main(void)
+{
+	int a = 10, b = 20;		// 변수 수언과 초기화
+					
+	swap(a, b);				// a, b의 값을 복사해서 전달
+	printf("a :%d, b:%d\n", a, b);	// 변수 a, b 출력
+
+	return 0;
+}
+
+void swap(int x, int y)		// 인수 a, b의 값을 x, yㅇ에 복사해서 저장
+{
+	int temp;		// 교환을 위한 변수
+
+	temp = x;		
+	x = y;
+	y = temp;
+}
+
+>>  a :10, b:20
+```
+
+main 함수의 변수 a, b의 값이 복사되어 , 매개변수 x,y에 저장된다.
+
+결국 swap 함수 안에서는 a, b의 복사본을 바꾸기 때문에, main 함수의 두 변수 a, b의 값은 변함이 없다.( swap 함수에서 매개변수의 이름을 a, b로 사용해도 결과는 같다.) 
+
+#### 결론, 이름이 같아도 함수가 다르면 메모리에 별도의 저장 공간을 확보하므로 전혀 다른 변수로 사용된다.
+
+
+
+※ swap 함수에서 바꾼 값을 main 함수로 반환하는 방법을 생각할수도 있는데, 함수는 <u>오직 하나의 값만 반환</u> 할 수 있으므로, 
+
+<u>한 번의 함수 호출을 통해 두 변수의 값을 바꾸는 것</u>은 **불가능**하다.
 
 
 
