--- a/Char07.함수/7.함수.md
+++ b/Char07.함수/7.함수.md
@@ -1,20 +1,32 @@
-### 1. 함수의 작성과 사용
+### 1. 함수의 정의
 
-
+* 2개의 함수로 만든 프로그램
 
 ```c
+#include <stdio.h>
 
+int sum(int x, int y);
 
+int main(void)
+{
+	int a = 10, b = 20;
+	int result;
 
+	result = sum(a, b);
+	printf("result : %d\n", result);
+
+	return 0;
+}
+
+int sum(int x, int y)
+{
+	int temp;
+
+	temp = x + y;
+
+	return temp;
+}
 ```
-
-
-
-
-
-
-
-
 
 
 
@@ -133,23 +145,9 @@ void print_line(void)
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 ---
 
-### 5.재귀호출 함수
+### 5. 재귀호출 함수
 
 * 무한 값 출력
 
@@ -171,14 +169,6 @@ void fruit(void)
 	fruit();
 }
 ```
-
-
-
-
-
-
-
-
 
 
 
@@ -218,10 +208,6 @@ void fruit(int count)
 
 
 
-
-
-
-
 * 재귀호출과 반복문 차이
 
 ```c
@@ -244,46 +230,6 @@ void fruit(int count)
 	printf("jam\n");
 }
 ```
-
-
-
-
-
-
-
-
-
-
-
-### 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
