--- a/Char5.선택문/5.선택문.md
+++ b/Char5.선택문/5.선택문.md
@@ -3,11 +3,273 @@
 * if문의 기본 형식
 
   ```c
+  #define _CRT_SECURE_NO_WARNINGS
+  #include <stdio.h>
   
+  int main()
+  {
+  	int a, b;
+  	short c;
   
+  	printf("숫자를 입력하세요 : ");
+  	scanf_s("%d, %d", &a, &b);
+  	
+  	printf("연산문자를 입력하세요 : ");
+  	scanf_s("%s", &c);
+  
+  	int d;
+  
+  	switch (c)
+  	{
+  	case '+':
+  		d = a + b;
+  		break;
+  
+  	case '-':
+  		d = a - b;
+  		break;
+  
+  	case '*':
+  		d = a * b;
+  		break;
+  
+  	case '/':
+  		d = a / b;
+  		break;
+  
+  	default:
+  		printf("정확한 문자를 입력하세요.");
+  		break;
+  	}
+  
+  	printf("결과 : %d", d);
+  
+  	return 0;
+  }
   ```
-
   
+
+
+
+---
+
+### 2. if ~ else 문
+
+
+
+```c
+#include <stdio.h>
+
+int main(void)
+{
+	int a = 10;
+
+	if (a >= 0)
+	{
+		a = 1;
+	}
+	else
+	{
+		a = -1;
+	}
+
+	printf("a : %d\n", a);
+
+	return 0;
+}
+```
+
+
+
+---
+
+### 3. If ~ else If ~ else 문
+
+```c
+#include <stdio.h>
+
+int main(void)
+{
+	int a = 0, b = 0;
+
+	if (a > 0)
+	{
+		b = 1;
+	}
+	else if (a == 0)
+	{
+		b = 2;
+	}
+	else
+	{
+		b = 3;
+	}
+
+	printf("b : %d\n", b);
+
+	return 0;
+}
+```
+
+
+
+---
+
+### 4. 중첩된 if문
+
+
+
+```c
+#include <stdio.h>
+
+int main(void)
+{
+	int a = 10, b = 20;
+
+	if (a > 10)
+	{
+		if (b >= 0)
+		{
+			b = 1;
+		}
+		else
+		{
+			b = -1;
+		}
+
+	}
+
+	printf("a : %d, b: %d\n", a, b);
+
+	return 0;
+}
+```
+
+
+
+---
+
+### 5. 중첩 if문에서 중괄호가 반드시 필요한 경우
+
+```c
+#include <stdio.h>
+
+int main(void)
+{
+	int a = 10, b = 20;
+
+	if (a > 10)
+	{
+		if (b >= 0)
+		{
+			b = 1;
+		}
+		else
+		{
+			b = -1;
+		}
+
+	}
+
+	printf("a : %d, b: %d\n", a, b);
+
+	return 0;
+}
+```
+
+
+
+---
+
+### 6. switch ~ case 문
+
+```c
+#include <stdio.h>
+
+int main(void)
+{
+	int rank = 2, m = 0;
+
+	switch (rank)
+	{
+	case 1:
+		m = 300;
+		break;
+
+	case 2:
+		m = 200;
+		break;
+
+	case 3:
+		m = 100;
+		break;
+
+	default:
+		m = 10;
+		break;
+	}
+
+	return 0;
+}
+```
+
+
+
+---
+
+### [ 실습 ] 계산기 만들기
+
+
+
+```c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+int main()
+{
+	int a, b;
+	short c;
+
+	printf("숫자를 입력하세요 : ");
+	scanf_s("%d, %d", &a, &b);
+	
+	printf("연산문자를 입력하세요 : ");
+	scanf_s("%s", &c);
+
+	int d;
+
+	switch (c)
+	{
+	case '+':
+		d = a + b;
+		break;
+
+	case '-':
+		d = a - b;
+		break;
+
+	case '*':
+		d = a * b;
+		break;
+
+	case '/':
+		d = a / b;
+		break;
+
+	default:
+		printf("정확한 문자를 입력하세요.");
+		break;
+	}
+
+	printf("결과 : %d", d);
+
+	return 0;
+}
+```
+
+
+
+
 
 ---
 ## 다음 Page [6강 반복문](https://github.com/sumin2123/Study-C/blob/main/Char6.%EB%B0%98%EB%B3%B5%EB%AC%B8/%EB%B0%98%EB%B3%B5%EB%AC%B8.md)
