--- a/Char6.반복문/반복문.md
+++ b/Char6.반복문/반복문.md
@@ -53,7 +53,7 @@
 
 ---
 
-#### 3. do ~ while 문
+### 3. do ~ while 문
 
 * do while문을 사용한 반복문
 
@@ -74,6 +74,8 @@
   	return 0;
   }
   ```
+
+
 
 
 
@@ -107,9 +109,67 @@
 
 ---
 
-### 5. 실습
+### 5. break를 사용한 반복문 종료
 
-* 피라미드 만들기 
+  break 는 본인하고 가장 가까운 for문만 빠져나온다 ( 2개 X)
+
+```c
+#include <stdio.h>
+
+int main(void)
+{
+	int i;
+	int sum = 0;
+
+	for (i = 1; i <= 10; i++)
+	{
+		sum += i;
+		if (sum > 30) break;
+
+	}
+
+	printf("누락한 값 : %d\n", sum);
+	printf("마지막으로 더한 값 : %d\n", i);
+
+	return 0;
+}
+```
+
+
+
+---
+
+### 6. continue
+
+반복문의 일부를 건너뛰기
+
+사용 시 다음 실행 위치가 반복문의 블록 끝이 된다.(블록탈출 X)
+
+조건에 따라 반복문의 일부를 제외하고 반복 가능
+
+```c
+for (i = 1; i <= 100; i++)
+{
+    if ( (i % 3) == 0)
+    {
+        continue;	
+        // i가 3의 배수면 sum += i문자을 건너뛰고, 블록 끝으로 간 후에 다시 반복한다.
+    }
+    sum += i;
+}
+```
+
+여기서 continue에 의해 제어가 블록 끝으로 이동한 후 다시 반복 시작
+
+
+
+
+
+---
+
+### [ 실습 ]
+
+* 중첩 반복문을 활용한 피라미드 만들기 
 
   ```c
   int num=5;
@@ -152,41 +212,6 @@
   
   }
   ```
-
-  
-
----
-
-### 6. break
-
-break 는 본인하고 가장 가까운 for문만 빠져나온다 ( 2개 X)
-
-```c
-#include <stdio.h>
-
-int main(void)
-{
-	int i;
-	int sum = 0;
-
-	for (i = 1; i <= 10; i++)
-	{
-		sum += i;
-		if (sum > 30) break;
-
-	}
-
-	printf("누락한 값 : %d\n", sum);
-	printf("마지막으로 더한 값 : %d\n", i);
-
-	return 0;
-}
-```
-
-
-
-
-
 
 
 
